--- a/pcso-lotto-and-games/Jollibee.html
+++ b/pcso-lotto-and-games/Jollibee.html
@@ -209,6 +209,9 @@ function closeNav() {
     <a href="https://facebook.com/sharer.php?u=https://yup.ph" class="fbb" style="width:33.33333%; margin-right:5px; border-radius:20px; display:inline-block; border:1px solid #ccc; font-size:13px; text-align:center"><b>facebook</b></a>
     <a href="https://twitter.com/share?url=https://yup.ph&amp;text=How%20to%20Franchise%20Jollibee%20in%20the%20Philippines&amp;hashtags=JollibeeFranchising" class="fbb" style="border-radius:20px; width:33.33333%; border:1px solid #ccc; font-size:13px; text-align:center"><b>twitter</b></a>
     </div><br><br>
+		
+	<p><a class="ff" style="padding:8px; padding-top:11px; background:#f2f2f2; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>&nbsp;Recommended</b></a></p>	
+		
     <!-- Google Ads -->
 	<div style="background:#f2f2f2; overflow:hidden; margin:auto; text-align:center">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -224,7 +227,7 @@ function closeNav() {
     
     <!-- Recommended -->
     
-    <br><p><a class="ff" style="padding:8px; padding-top:11px; background:#f2f2f2; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>&nbsp;Recommended</b></a></p>
+    <br>
     <div class="row fcolor"><div class="half">
     <!-- Article 1 -->
     <article><a href="http://www.fb.com" class="sp"><div class="articleE">
