--- a/pcso-lotto-and-games/Jollibee.html
+++ b/pcso-lotto-and-games/Jollibee.html
@@ -210,7 +210,7 @@ function closeNav() {
     <a href="https://twitter.com/share?url=https://yup.ph&amp;text=How%20to%20Franchise%20Jollibee%20in%20the%20Philippines&amp;hashtags=JollibeeFranchising" class="fbb" style="border-radius:20px; width:33.33333%; border:1px solid #ccc; font-size:13px; text-align:center"><b>twitter</b></a>
     </div><br><br>
 		
-	<p><a class="ff" style="padding:8px; padding-top:11px; background:#f2f2f2; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>&nbsp;Recommended</b></a></p>	
+	<p><a class="ff" style="padding:8px; padding-top:11px; background:#f2f2f2; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>&nbsp;Recommended</b></a></p><br>	
 		
     <!-- Google Ads -->
 	<div style="background:#f2f2f2; overflow:hidden; margin:auto; text-align:center">
