--- a/pcso-lotto-and-games/Jollibee.html
+++ b/pcso-lotto-and-games/Jollibee.html
@@ -212,8 +212,8 @@ function closeNav() {
 		
 	<p><a class="ff" style="padding:8px; padding-top:11px; background:#f2f2f2; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>&nbsp;Recommended</b></a></p><br>	
 		
-    <!-- Google Ads -->
-	<div style="background:#f2f2f2; overflow:hidden; margin:auto; text-align:center">
+    <!-- Google Ads --> <div class="row fcolor">
+	<div style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; margin:auto; text-align:center">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
     style="display:block; text-align:center;"
@@ -228,7 +228,7 @@ function closeNav() {
     <!-- Recommended -->
     
     <br>
-    <div class="row fcolor"><div class="half">
+    <div class="half">
     <!-- Article 1 -->
     <article><a href="http://www.fb.com" class="sp"><div class="articleE">
     <div class="articleF"><img src="../../images/mcdofaqs2.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
