--- a/pcso-lotto-and-games/Jollibee.html
+++ b/pcso-lotto-and-games/Jollibee.html
@@ -223,7 +223,7 @@ function closeNav() {
      data-ad-slot="1083447155"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
-    </script></div>
+    </script></div><br class="hide-s">
     
     <!-- Recommended -->
     
