--- a/pcso-lotto-and-games/Jollibee.html
+++ b/pcso-lotto-and-games/Jollibee.html
@@ -183,7 +183,16 @@ function closeNav() {
 	<li>Willingness to devote time in managing the restaurant</li>
 	<li>Can successfully complete the required <a href="../../Business/Franchising/Jollibee-Training-Program.html" title="Jollibee Training Program" style="color:#e84118">training program</a>.</li></ul>
 	<p>…then congratulations pwede ka maging franchisee ng Jollibee!</p><br>
-	
+	<div style="overflow:hidden; margin:auto; text-align:center">
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Big450 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:100%; max-width:900px;height:450px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="1458598088"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div><br>
 	<p class="title">Franchising Application Steps</p>
     <h1 class="psize"><i>Paano mag-franchise ng Jollibee sa Pilipinas?</i></h1>
     <p>Mag-download at mag-print ng Franchise <a href="http://www.jollibee.com.ph/Philippines/" title="Jollibee Franchise Application Form" style="color:#e84118">application form</a> at siguraduhing kumpleto ang pag fill-up ng form. Mag-prepare ng proposal kasama ang mga sumusunod:</p>
