--- a/pcso-lotto-and-games/Jollibee.html
+++ b/pcso-lotto-and-games/Jollibee.html
@@ -145,7 +145,7 @@
     
     <p class="htitle" style="text-align:center; color:#404040; -webkit-margin-before:40px; -webkit-margin-after:0">Paano mag-Franchise ng Jollibee sa Pilipinas</p><br>
 	<p class="ff au" style="color:#626567; text-align:center">February 14, 2018</p><br>
-	<img src="../images/MCDO.jpg" alt="How to Franchise McDonald's in the Philippines" style="width:100%">
+	<img src="" alt="How to Franchise McDonald's in the Philippines" style="width:100%">
 	
 	<div style="width:100%; max-width:900px; margin:auto">
 	<p class="au3 ff" style="margin-top:25px; margin-left:25px; color:#626567;"><i>by <a href="../../Business/Management/About-McDonalds.html" style="color:#404040">Paul Mamparo</a><br><span class="au1"><a href="http://mcdonalds.com.ph/pages/content/franchising" style="color:#626567">Site admin, TagLish.ph</a></span></i></p>
