--- a/pcso-lotto-and-games/Jollibee.html
+++ b/pcso-lotto-and-games/Jollibee.html
@@ -145,7 +145,7 @@
 	<li>Mang Inasal</li>
 	<li>Burger King</li>
 	</ul><br>
-	
+	<div style="background:#f2f2f2; padding:3px; overflow:hidden; margin:auto; border:1px solid #ccc; border-radius:3px; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
 	<p class="title">Qualifications of a Jollibee franchisee</p>
 	<h3 class="psize"><i>Ano ang qualifications para sa gusto mag-franchise ng Jollibee?</i></h3>
 	<p>Ito ang qualifications na hinahanap ng Jollibe sa franchisee:</p>
@@ -169,7 +169,7 @@
 	<p>Ang Jollibee franchise ROI ay (5) five years according sa article/presentation ni Charina Bautista sa <a href="https://prezi.com/m/2jrhvs0ufegm/why-jollibee-as-a-business/" rel="nofollow" style="color:#e84118">prezi.com</a> two years ago, noong &#8369;15-30 Million palang ang franchise fee ng Jollibee. Sabi nya pa, ang pag-franchise ng Jollibee ay “..sound investment..wise decision!!!!” daw.</p>
 	<p>According naman sa Jollibee ang ROI at restaurant profitability ay depende sa several factors kagaya ng sales, market potential, investment at sa ability ng franchisee sa pag-control nya sa operating expenses nya.</p>
 	<p>Details of franchise fee / investment cost, return of investments and other franchising expenses will be discussed with the franchisee once his application has been approved.</p><br>
-	
+	<div style="background:#f2f2f2; padding:3px; overflow:hidden; margin:auto; border:1px solid #ccc; border-radius:3px; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
 	<p class="title">Franchising Application</p>
     <h1 class="psize"><i>Paano mag-franchise ng Jollibee<span class="hide"> sa Pilipinas</span>?</i></h1>
     <p>Mag-download at mag-print ng Franchise <a href="http://www.jollibee.com.ph/Philippines/" rel="nofollow" title="Jollibee Franchise Application Form" style="color:#e84118">application form</a> at siguraduhing kumpleto ang pag fill-up ng form. Mag-prepare ng proposal kasama ang mga sumusunod:</p>
