--- a/pcso-lotto-and-games/Jollibee.html
+++ b/pcso-lotto-and-games/Jollibee.html
@@ -145,7 +145,7 @@
 	<li>Mang Inasal</li>
 	<li>Burger King</li>
 	</ul><br>
-	<div style="margin-bottom:50px; background:#f2f2f2; padding:3px; overflow:hidden; margin:auto; border:1px solid #ccc; border-radius:3px; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
+	<div style="background:#f2f2f2; padding:3px; overflow:hidden; margin:auto; border:1px solid #ccc; border-radius:3px; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div><br>
 	<p class="title">Qualifications of a Jollibee franchisee</p>
 	<h3 class="psize"><i>Ano ang qualifications para sa gusto mag-franchise ng Jollibee?</i></h3>
 	<p>Ito ang qualifications na hinahanap ng Jollibe sa franchisee:</p>
