--- a/pcso-lotto-and-games/Jollibee.html
+++ b/pcso-lotto-and-games/Jollibee.html
@@ -50,8 +50,8 @@
 <a href="javascript:void(0)" class="hide-l hide-m" style="font-size:22px; margin-right:10px; color:#626567; text-decoration:none; float:right;" onclick="openNav()">&#9776;</a></div>
 
 <!-- Mobile Ads Bottom --> 
-<div class="hide-m hide-l" style="text-align:center; z-index:5; border-top:1px solid #ccc; padding:2px; position:fixed; width:100%; height:56px; bottom:0; background:#fff">
-<a style="color:#404040; float:right; border-radius:2px; position:absolute; bottom:55.5px; background:#ccc; right:0; font-size:22px;" onclick="this.parentElement.style.display='none'"><span style="color:#ccc">.</span>&times;<span style="color:#ccc">.</span></a>
+<div class="hide-m hide-l" style="text-align:center; z-index:5; border-top:1px solid #f2f2f2; padding:2px; position:fixed; width:100%; height:56px; bottom:0; background:#fff">
+<a style="color:#404040; float:right; border-radius:2px; position:absolute; bottom:55.5px; background:#f2f2f2; right:0; font-size:22px;" onclick="this.parentElement.style.display='none'"><span style="color:#ccc">.</span>&times;<span style="color:#ccc">.</span></a>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block; width:100%; max-width:320px; height:50px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="4062277366"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
 	
 <!-- Mobile Navigation --> <nav><div id="mySidenav" class="sidenav" style="height:100%; width:0; position:fixed; z-index:5; top:0; left:0; overflow-x:hidden; transition:0.4s; padding-top:60px; background:#3F3F3F">
@@ -280,7 +280,7 @@
     <header><p><a href="http://www.fb.com">How to Franchise Chowking in the Philippines?</a></p></header></div></div></a></article></div></div></div></main></div>
     
     <div class="side shake">
-<!-- Google Ads --> <div style="overflow:hidden; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div><br>
+<!-- Google Ads --> <br class="hide-m hide-l"><div style="overflow:hidden; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div><br>
     
 <!-- Related Articles --> <div style="background:#f2f2f2;"><p class="ff" style="padding:5px; padding-top:8px; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>Related Articles</b></p></div><aside><div class="row fcolor" style="width:100%; max-width:450px; margin:auto">
     <!-- Article 1 --> <div class="article"><div class="articleB"><a href="" title=""><img src="../../images/mcdofaqs3.png" alt="" class="articleC"></a></div>
