--- a/pcso-lotto-and-games/Jollibee.html
+++ b/pcso-lotto-and-games/Jollibee.html
@@ -322,7 +322,31 @@
     <div style="text-align:center; width:100%; max-width:270px; border-bottom:1px solid #ccc">
     <a href="https://facebook.com/sharer.php?u=https://yup.ph" class="ff" style="color:#f2f2f2; display:inline-block; background:#167EFB; padding:15px; width:31%; font-size:14px"><b>F</b></a>
     <a href="https://facebook.com/sharer.php?u=https://yup.ph" class="ff" style="margin-right:5px; margin-left:5px; color:#f2f2f2; display:inline-block; width:31%; background:#4B77BE; padding:15px; font-size:14px"><b>T</b></a>
-    <a href="https://plus.google.com/share?url=https://yup.ph" class="ff" style="margin-bottom:20px; color:#f2f2f2; display:inline-block; background:#e84118; padding:15px; width:31%; font-size:14px"><b>g+</b></a></div></div>
+    <a href="https://plus.google.com/share?url=https://yup.ph" class="ff" style="margin-bottom:20px; color:#f2f2f2; display:inline-block; background:#e84118; padding:15px; width:31%; font-size:14px"><b>g+</b></a>
+	<!-- Quantcast Tag -->
+<script type="text/javascript">
+var _qevents = _qevents || [];
+
+(function() {
+var elem = document.createElement('script');
+elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
+elem.async = true;
+elem.type = "text/javascript";
+var scpt = document.getElementsByTagName('script')[0];
+scpt.parentNode.insertBefore(elem, scpt);
+})();
+
+_qevents.push({
+qacct:"p-Vf0zFvTHd5xRc"
+});
+</script>
+
+<noscript>
+<div style="display:none;">
+<img src="//pixel.quantserve.com/pixel/p-Vf0zFvTHd5xRc.gif" border="0" height="1" width="1" alt="Quantcast"/>
+</div>
+</noscript>
+<!-- End Quantcast tag --></div></div>
     <div class="main"> <div class="half">
 <h5><a href="../../Science-Health-Tech.html" title="Science, Health and Technology"><b>Health</b></a></h5>
 <h5><a href="../../Christianity.html" title="Christianity"><b>Education</b></a></h5>
