--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -320,6 +320,30 @@ function closeNav() {
 
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color: #EEEEEE; font-size:15px"><b>&copy; Lotto Info Philippines</b></h4>
-</div>		
+<!-- Quantcast Tag -->
+<script type="text/javascript">
+var _qevents = _qevents || [];
+
+(function() {
+var elem = document.createElement('script');
+elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
+elem.async = true;
+elem.type = "text/javascript";
+var scpt = document.getElementsByTagName('script')[0];
+scpt.parentNode.insertBefore(elem, scpt);
+})();
+
+_qevents.push({
+qacct:"p-Vf0zFvTHd5xRc"
+});
+</script>
+
+<noscript>
+<div style="display:none;">
+<img src="//pixel.quantserve.com/pixel/p-Vf0zFvTHd5xRc.gif" border="0" height="1" width="1" alt="Quantcast"/>
+</div>
+</noscript>
+<!-- End Quantcast tag -->
+	</div>		
 </body>
 </html>
