--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -82,16 +82,7 @@
  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
  <link rel="manifest" href="../manifest.json">
- <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
-
-	<script async src="//pagead2.googlesyndication.com/
-pagead/js/adsbygoogle.js"></script>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({
-google_ad_client: "ca-pub-8489405167836126",
-enable_page_level_ads: true
-});
-</script>
+ <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">	
 	
 <style>
 * {box-sizing: border-box;} body {margin:0;} p, a, li, table {font-family:Arial;} @font-face {font-family:mFont; src: url(../Lotto-Info.woff);} h1, h2, h3, h4, .topnav a, .sidenav a, .ff {font-family:mFont;}
@@ -117,8 +108,9 @@ img {display:block; margin:auto; width:50%;} .row:after, row:before {content:"";
   <a href="../pcso-lotto-and-games.html" class="hov hide-s" style="color:#ffffff; border-bottom:3px solid white;">PCSO Lotto & Games</a>
   <a href="../results-and-winnings.html" class="hov hide-s">Results & Winnings</a>
   <a href="#" class="hov hide-s">FAQs</a>
-</div>
-</div>
+</div></div>
+	
+	<div class="hide-m hide-l" style="text-align:center; z-index:5; border-top:1px solid #ccc; padding:2px; position:fixed; width:100%; height:56px; bottom:0; background:#fff"> <a style="color:#404040; float:right; border-radius:2px; position:absolute; bottom:55.5px; background:#f2f2f2; right:0; font-size:22px;" onclick="this.parentElement.style.display='none'"><span style="color:#f2f2f2">.</span>&times;<span style="color:#f2f2f2">.</span></a> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block; width:100%; max-width:320px; height:50px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="4062277366"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
 
 <div class="topnav" style="background:#ffffff; z-index:1; width:100%; overflow:hidden; position:-webkit-sticky; position:sticky; top:0; box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)">
   <a href="../index.html" class="hide-m hide-l" style="font-size:20px; color:#626567; margin-left:5px;"><b>Lotto Info Philippines</b></a>
@@ -147,6 +139,16 @@ function closeNav() {
 <div class="row" style="max-width:1200px; margin:auto">
   
   <div class="main">
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   	<a href="../index.html" class="ff" style="margin-left:2px; font-size:10px; color:#626567; text-decoration: none; display:inline-block">Home /</a>
   	<a href="../pcso-lotto-and-games.html" class="ff" style="font-size:10px; color:#626567; text-decoration:none; display:inline-block">Lotto & Games /</a>
   	<a href="Swertres.html" class="ff" style="font-size:10px; color:#626567; text-decoration: none; display:inline-block">Swertres</a>
