--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -93,7 +93,7 @@ h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p, l
 img {display:block; margin:auto; width:50%;} .row:after, row:before {content:""; display:table; clear:both;} @media (min-width:601px){.main{width:74.99999%}.side{width:24.99999%}.half{width:49.99999%}}
 @media (max-width: 600px){h1 {font-size:19px} h2{font-size:19px} h3{font-size:19px} h4{font-size:17px} .ftext{font-size:22px} .half{padding:0;}} .m{margin-left:6px;} .sidenav a { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color:#f2f2f2; display:block; transition:0.3s;} th, td  {padding:5px 5px}
 .ball {background:#F7DC6F; border-radius: 0.9em; -moz-border-radius: 0.9em; -webkit-border-radius: 0.9em; display: inline-block; font-weight:bold; color:#3a3a3a!important; line-height: 1.8em; margin-right: 8px; text-align: center; width: 1.8em;}
-.footer a {color:#EEEEEE; font-size:13px;} a {text-decoration:none}
+.footer a {color:#EEEEEE; font-size:13px;} a {text-decoration:none} .MyS a {color:#2d89ef; text-decoration:none}
 </style>
 </head>
 <body>
@@ -162,7 +162,8 @@ function closeNav() {
     <p>Playing PCSO Swertres Lotto is simple. Go to any authorized PCSO lotto outlet and get your PCSO Swertres Lotto playslip and mark 3 digit numbers (from numbers 0 to 9) you can choose three same numbers (Example: <span class="ball">3</span><span class="ball">3</span><span class="ball">3</span>). You will pay &#8369;10 for every standard combination play.</p>
     <p>You can also play the <b>Rambolito</b>.</p>
     <p id="rambolito">To play this game, you must be 18 years old or above.</p>
-    <a href="#rambolito" title="How does Rambolito works?"><h2 style="color:#4B77BE"><strong>How does Rambolito works?</strong></h2></a>
+    <div style="overflow:hidden; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
+	  <a href="#rambolito" title="How does Rambolito works?"><h2 style="color:#4B77BE"><strong>How does Rambolito works?</strong></h2></a>
 	<p>In rambolito, the system will automatically combine all the different possible combinations of your chosen 3 numbers. Giving you more number combinations.</p>
 	<p><b>Rambolito 6</b><br>In rambolito, If your chosen number combination is composed of three (3) different numbers, it will automatically fall under <i>Rambolito 6</i>.</p>
 	<p>Example: If your chosen number combination is <span class="ball">3</span><span class="ball">4</span><span class="ball">5</span></p>
@@ -187,7 +188,7 @@ function closeNav() {
     <p>Standard play = &#8369;4,500
     <br id="Result">Rambolito 3 = &#8369;1,500
     <br>Rambolito 6 = &#8369;750</p>
-
+<div style="overflow:hidden; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
     <a href="#Result" title="Where can I see the Swertres results"><h3 style="color:#4B77BE"><strong>Where can I see the Swertres Lotto results?</strong></h3></a>
     <p>The draws is televise in PTV 4. You can also find the official and verified Swertres Lotto results right here on the LottoInfo.ph website. Just head to the <a href="../results-and-winnings/Swertres-results.html" title="Swertres Result Today" style="color:#2d89ef; text-decoration:none">Swertres Lotto draw results page</a>. The winning numbers are posted once the draw results have been verified and confirmed. However, we still encourage you to visit the official PCSO website if you still want to verify the game results there.</p>
     <p id="HowToClaim">The draws are held three times a day, every 11:00 am, 4 pm and 9 pm.</p>
@@ -202,7 +203,39 @@ function closeNav() {
     
   <div class="side">
     <img src="../images/Swertres-how.png" alt="How to play PCSO Swertres" class="hide-s" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
-  </div>
+ <br class="hide-s">
+<div style="overflow:hidden; text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-8489405167836126"
+    data-ad-slot="9196104101"
+    data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div><br>
+	  <div class="MyS" style="padding:16px; border:1px solid #ccc; border-radius:5px">
+	<h3 style="color:#4B77BE;">You May Also Like</h3>
+	<p><a href="../pcso-lotto-and-games/Ultra-lotto-6-58.html" title="How To Play Ultra Lotto 6/58" rel="bookmark">How To Play Ultra Lotto 6/58</p>
+	<p><a href="../results-and-winnings.html#58Result" title="Ultra Lotto 6/58 Result" rel="bookmark">Ultra Lotto 6/58 Result</p>
+	<p><a href="../pcso-lotto-and-games/Grand-lotto-6-55.html" title="How To Play Grand Lotto 6/55" rel="bookmark">How To Play Grand Lotto 6/55</p>
+	<p><a href="../results-and-winnings.html#55Result" title="Grand Lotto 6/55 Result" rel="bookmark">Grand Lotto 6/55 Result</p>
+	<p><a href="../pcso-lotto-and-games/Super-lotto-6-49.html" title="How To Play Super Lotto 6/49" rel="bookmark">How To Play Super Lotto 6/49</p>
+	<p><a href="../results-and-winnings.html#49Result" title="Super Lotto 6/49 Result" rel="bookmark">Super Lotto 6/49 Result</p>
+	<p><a href="../pcso-lotto-and-games/Mega-Lotto-6-45.html" title="How To Play Mega Lotto 6/45" rel="bookmark">How To Play Mega Lotto 6/45</p>
+	<p><a href="../results-and-winnings.html#45Result" title="Mega Lotto 6/45 Result" rel="bookmark">Mega Lotto 6/45 Result</p>
+	<p><a href="../pcso-lotto-and-games/lotto-6-42.html" title="How To Play Lotto 6/42" rel="bookmark">How To Play Lotto 6/42</p>
+	<p><a href="../results-and-winnings.html#42Result" title="Lotto 6/42 Result" rel="bookmark">Lotto 6/42 Result</p>
+	<p><a href="../pcso-lotto-and-games/6-Digit-Game.html" title="How To Play 6 Digit Game" rel="bookmark">How To Play 6 Digit Game</p>
+	<p><a href="../results-and-winnings.html#6DResult" title="6 Digit Game Result" rel="bookmark">(6D) 6 Digit Game Result</p>
+	<p><a href="../pcso-lotto-and-games/4-Digit-Game.html" title="How To Play 4 Digit Game" rel="bookmark">How To Play 4 Digit Game</p>
+	<p><a href="../results-and-winnings.html#4DResult" title="4 Digit Game Result" rel="bookmark">(4D) 4 Digit Game Result</p>
+	<p><a href="../pcso-lotto-and-games/Swertres.html" title="How to Play Swertres" rel="bookmark">How To Play Swertres</p>
+	<p><a href="../results-and-winnings.html#SwertresResult" title="Swertres Result" rel="bookmark">Swertres Result</a></p>
+	<p><a href="../pcso-lotto-and-games/EZ-2.html" title="How To Play EZ2 Lotto" rel="bookmark">How To Play EZ2 Lotto</p>
+	<p><a href="../results-and-winnings.html#EZ2Result" title="EZ2 Lotto Result" rel="bookmark">EZ2 Lotto Result</a></p>
+	</div>
+	</div>
 </div>
 
 <script type=application/ld+json>{
