--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -310,7 +310,7 @@ function closeNav() {
  }
  }</script>
 	
-	<div style="overflow:hidden; padding-right:16px; padding-left:16px; text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<div style="overflow:hidden; padding:16px; text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
      style="display:block; width:100%;"
