--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -313,7 +313,7 @@ function closeNav() {
 	<div style="overflow:hidden; padding:16px; text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
-     style="display:block; width:100%;"
+     style="display:block"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="9196104101"
      data-ad-format="auto"></ins>
