--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -162,7 +162,7 @@ function closeNav() {
     <p>Playing PCSO Swertres Lotto is simple. Go to any authorized PCSO lotto outlet and get your PCSO Swertres Lotto playslip and mark 3 digit numbers (from numbers 0 to 9) you can choose three same numbers (Example: <span class="ball">3</span><span class="ball">3</span><span class="ball">3</span>). You will pay &#8369;10 for every standard combination play.</p>
     <p>You can also play the <b>Rambolito</b>.</p>
     <p id="rambolito">To play this game, you must be 18 years old or above.</p>
-    <div style="overflow:hidden; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div><br>
+    <br><div style="overflow:hidden; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div><br>
 	  <a href="#rambolito" title="How does Rambolito works?"><h2 style="color:#4B77BE"><strong>How does Rambolito works?</strong></h2></a>
 	<p>In rambolito, the system will automatically combine all the different possible combinations of your chosen 3 numbers. Giving you more number combinations.</p>
 	<p><b>Rambolito 6</b><br>In rambolito, If your chosen number combination is composed of three (3) different numbers, it will automatically fall under <i>Rambolito 6</i>.</p>
@@ -188,7 +188,7 @@ function closeNav() {
     <p>Standard play = &#8369;4,500
     <br id="Result">Rambolito 3 = &#8369;1,500
     <br>Rambolito 6 = &#8369;750</p>
-<div style="overflow:hidden; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div><br>
+<br><div style="overflow:hidden; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div><br>
     <a href="#Result" title="Where can I see the Swertres results"><h3 style="color:#4B77BE"><strong>Where can I see the Swertres Lotto results?</strong></h3></a>
     <p>The draws is televise in PTV 4. You can also find the official and verified Swertres Lotto results right here on the LottoInfo.ph website. Just head to the <a href="../results-and-winnings/Swertres-results.html" title="Swertres Result Today" style="color:#2d89ef; text-decoration:none">Swertres Lotto draw results page</a>. The winning numbers are posted once the draw results have been verified and confirmed. However, we still encourage you to visit the official PCSO website if you still want to verify the game results there.</p>
     <p id="HowToClaim">The draws are held three times a day, every 11:00 am, 4 pm and 9 pm.</p>
@@ -234,7 +234,7 @@ function closeNav() {
 	<p><a href="../results-and-winnings.html#SwertresResult" title="Swertres Result" rel="bookmark">Swertres Result</a></p>
 	<p><a href="../pcso-lotto-and-games/EZ-2.html" title="How To Play EZ2 Lotto" rel="bookmark">How To Play EZ2 Lotto</p>
 	<p><a href="../results-and-winnings.html#EZ2Result" title="EZ2 Lotto Result" rel="bookmark">EZ2 Lotto Result</a></p>
-	</div>
+	</div><br>
 	  <div style="overflow:hidden; text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
