--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -214,7 +214,7 @@ function closeNav() {
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script></div><br>
-	  <div class="MyS" style="border-left:1px solid #ccc">
+	  <div class="MyS">
 	<h3 style="color:#4B77BE;">You May Also Like</h3>
 	<p><a href="../pcso-lotto-and-games/Ultra-lotto-6-58.html" title="How To Play Ultra Lotto 6/58" rel="bookmark">How To Play Ultra Lotto 6/58</p>
 	<p><a href="../results-and-winnings.html#58Result" title="Ultra Lotto 6/58 Result" rel="bookmark">Ultra Lotto 6/58 Result</p>
