--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -310,7 +310,7 @@ function closeNav() {
  }
  }</script>
 	
-	<div class="hide-s hide-m" style="overflow:hidden; padding:16px; text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<div class="hide-s" style="overflow:hidden; padding:16px; text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
      style="display:block"
