--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -218,7 +218,7 @@ function closeNav() {
 	<h3 style="color:#4B77BE;">You May Also Like</h3>
 	<p><a href="../pcso-lotto-and-games/Ultra-lotto-6-58.html" title="How To Play Ultra Lotto 6/58" rel="bookmark">How To Play Ultra Lotto 6/58</p>
 	<p><a href="../results-and-winnings.html#58Result" title="Ultra Lotto 6/58 Result" rel="bookmark">Ultra Lotto 6/58 Result</p>
-	<p><a href="../pcso-lotto-and-games/Grand-lotto-6-55.html" title="How To Play Grand Lotto 6/55" rel="bookmark">How To Play Grand Lotto 6/55</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/grand-lotto-6-55" title="How To Play Grand Lotto 6/55" rel="bookmark">How To Play Grand Lotto 6/55</p>
 	<p><a href="../results-and-winnings.html#55Result" title="Grand Lotto 6/55 Result" rel="bookmark">Grand Lotto 6/55 Result</p>
 	<p><a href="../pcso-lotto-and-games/Super-lotto-6-49.html" title="How To Play Super Lotto 6/49" rel="bookmark">How To Play Super Lotto 6/49</p>
 	<p><a href="../results-and-winnings.html#49Result" title="Super Lotto 6/49 Result" rel="bookmark">Super Lotto 6/49 Result</p>
