--- a/Index.html
+++ b/Index.html
@@ -274,7 +274,7 @@ function closeNav() {
  "url": "https://lottoinfo.ph",
  "urlTemplate": "https://lottoinfo.ph"
  }
- }</script>
+ }</script><footer>
 <div class="row footer" style="background:#2d89ef">
 <div class="side">
 <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Latest PCSO lotto results</b></h4>  
@@ -331,5 +331,29 @@ function closeNav() {
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <p style="color: #EEEEEE"><b>&copy; Lotto Info Philippines</b></p>
 </div>	
+	<!-- Quantcast Tag -->
+<script type="text/javascript">
+var _qevents = _qevents || [];
+
+(function() {
+var elem = document.createElement('script');
+elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
+elem.async = true;
+elem.type = "text/javascript";
+var scpt = document.getElementsByTagName('script')[0];
+scpt.parentNode.insertBefore(elem, scpt);
+})();
+
+_qevents.push({
+qacct:"p-Vf0zFvTHd5xRc"
+});
+</script>
+
+<noscript>
+<div style="display:none;">
+<img src="//pixel.quantserve.com/pixel/p-Vf0zFvTHd5xRc.gif" border="0" height="1" width="1" alt="Quantcast"/>
+</div>
+</noscript>
+<!-- End Quantcast tag --></footer>
 </body>
 </html>
