--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -320,8 +320,7 @@ function closeNav() {
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script></div>
-
-<div class="row footer" style="background:#2d89ef">
+<footer><div class="row footer" style="background:#2d89ef">
 <div class="side">
 <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Latest PCSO lotto results</b></h4>  
  <p><a href="../results-and-winnings.html#58Result" title="Ultra Lotto 6/58 result">Ultra lotto 6/58</a></p>
@@ -400,6 +399,6 @@ qacct:"p-Vf0zFvTHd5xRc"
 </div>
 </noscript>
 <!-- End Quantcast tag -->
-	</div>		
+	</div></footer>		
 </body>
 </html>
