--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -216,23 +216,23 @@ function closeNav() {
 </script></div><br>
 	  <div class="MyS">
 	<h3 style="color:#4B77BE;">You May Also Like</h3>
-	<p><a href="../pcso-lotto-and-games/Ultra-lotto-6-58.html" title="How To Play Ultra Lotto 6/58" rel="bookmark">How To Play Ultra Lotto 6/58</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/ultra-lotto-6-58" title="How To Play Ultra Lotto 6/58" rel="bookmark">How To Play Ultra Lotto 6/58</p>
 	<p><a href="../results-and-winnings.html#58Result" title="Ultra Lotto 6/58 Result" rel="bookmark">Ultra Lotto 6/58 Result</p>
 	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/grand-lotto-6-55" title="How To Play Grand Lotto 6/55" rel="bookmark">How To Play Grand Lotto 6/55</p>
 	<p><a href="../results-and-winnings.html#55Result" title="Grand Lotto 6/55 Result" rel="bookmark">Grand Lotto 6/55 Result</p>
-	<p><a href="../pcso-lotto-and-games/Super-lotto-6-49.html" title="How To Play Super Lotto 6/49" rel="bookmark">How To Play Super Lotto 6/49</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/super-lotto-6-49" title="How To Play Super Lotto 6/49" rel="bookmark">How To Play Super Lotto 6/49</p>
 	<p><a href="../results-and-winnings.html#49Result" title="Super Lotto 6/49 Result" rel="bookmark">Super Lotto 6/49 Result</p>
-	<p><a href="../pcso-lotto-and-games/Mega-Lotto-6-45.html" title="How To Play Mega Lotto 6/45" rel="bookmark">How To Play Mega Lotto 6/45</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/mega-lotto-6-45" title="How To Play Mega Lotto 6/45" rel="bookmark">How To Play Mega Lotto 6/45</p>
 	<p><a href="../results-and-winnings.html#45Result" title="Mega Lotto 6/45 Result" rel="bookmark">Mega Lotto 6/45 Result</p>
-	<p><a href="../pcso-lotto-and-games/lotto-6-42.html" title="How To Play Lotto 6/42" rel="bookmark">How To Play Lotto 6/42</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/lotto-6-42" title="How To Play Lotto 6/42" rel="bookmark">How To Play Lotto 6/42</p>
 	<p><a href="../results-and-winnings.html#42Result" title="Lotto 6/42 Result" rel="bookmark">Lotto 6/42 Result</p>
-	<p><a href="../pcso-lotto-and-games/6-Digit-Game.html" title="How To Play 6 Digit Game" rel="bookmark">How To Play 6 Digit Game</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/6-digit-game" title="How To Play 6 Digit Game" rel="bookmark">How To Play 6 Digit Game</p>
 	<p><a href="../results-and-winnings.html#6DResult" title="6 Digit Game Result" rel="bookmark">(6D) 6 Digit Game Result</p>
-	<p><a href="../pcso-lotto-and-games/4-Digit-Game.html" title="How To Play 4 Digit Game" rel="bookmark">How To Play 4 Digit Game</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" title="How To Play 4 Digit Game" rel="bookmark">How To Play 4 Digit Game</p>
 	<p><a href="../results-and-winnings.html#4DResult" title="4 Digit Game Result" rel="bookmark">(4D) 4 Digit Game Result</p>
-	<p><a href="../pcso-lotto-and-games/Swertres.html" title="How to Play Swertres" rel="bookmark">How To Play Swertres</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/swertres" title="How to Play Swertres" rel="bookmark">How To Play Swertres</p>
 	<p><a href="../results-and-winnings.html#SwertresResult" title="Swertres Result" rel="bookmark">Swertres Result</a></p>
-	<p><a href="../pcso-lotto-and-games/EZ-2.html" title="How To Play EZ2 Lotto" rel="bookmark">How To Play EZ2 Lotto</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/ez-2" title="How To Play EZ2 Lotto" rel="bookmark">How To Play EZ2 Lotto</p>
 	<p><a href="../results-and-winnings.html#EZ2Result" title="EZ2 Lotto Result" rel="bookmark">EZ2 Lotto Result</a></p>
 	</div><br>
 	  <div style="overflow:hidden; text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -336,15 +336,15 @@ function closeNav() {
 
 <div class="side">
 	<h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>PCSO lotto & games</b></h4>  
-  	<p><a href="Ultra-lotto-6-58.html" title="How to play Ultra Lotto 6/58">Ultra lotto 6/58</a></p>
-  	<p><a href="Grand-lotto-6-55.html" title="How to play Grand Lotto 6/55">Grand lotto 6/55</a></p>
-	<p><a href="Super-lotto-6-49.html" title="How to play Super Lotto 6/49">Super lotto 6/49</a></p>
-	<p><a href="Mega-Lotto-6-45.html" title="How to play Mega Lotto 6/45">Mega lotto 6/45</a></p>
-	<p><a href="lotto-6-42.html" title="How to play Lotto 6/42">Lotto 6/42</a></p>
-	<p><a href="6-Digit-Game.html" title="How to play 6 Digit Game">6 Digit lotto</a></p>
-	<p><a href="4-Digit-Game.html" title="How to play 4 Digit Game">4 Digit lotto</a></p>
-	<p><a href="Swertres.html" title="How to play EZ2 Lotto">Swertres lotto</a></p>
-	<p><a href="EZ-2.html" title="How to play EZ2 Lotto">EZ 2 lotto</a></p>
+  	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/ultra-lotto-6-58" title="How to play Ultra Lotto 6/58">Ultra lotto 6/58</a></p>
+  	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/grand-lotto-6-55" title="How to play Grand Lotto 6/55">Grand lotto 6/55</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/super-lotto-6-49" title="How to play Super Lotto 6/49">Super lotto 6/49</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/mega-lotto-6-45" title="How to play Mega Lotto 6/45">Mega lotto 6/45</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/lotto-6-42" title="How to play Lotto 6/42">Lotto 6/42</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/6-digit-game" title="How to play 6 Digit Game">6 Digit lotto</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" title="How to play 4 Digit Game">4 Digit lotto</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/swertres" title="How to play Swertres">Swertres lotto</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/ez-2" title="How to play EZ2 Lotto">EZ 2 lotto</a></p>
 </div>
 
 <div class="side">
