--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -83,16 +83,7 @@
  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
  <link rel="manifest" href="manifest.json">
  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
-
-	<script async src="//pagead2.googlesyndication.com/
-pagead/js/adsbygoogle.js"></script>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({
-google_ad_client: "ca-pub-8489405167836126",
-enable_page_level_ads: true
-});
-</script>
-	
+		
 <style>
 * {box-sizing: border-box;} body {margin:0;} a, li, table {font-family:Arial;} @font-face {font-family:mFont; src: url(../Lotto-Info.woff);} p, h1, h2, h3, h4, .topnav a, .sidenav a, .ff {font-family:mFont;}
 h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p, li{font-size:17px;} .ftext{font-size:28px} .text-m{font-size:15px} .text-l {font-size:18px}
@@ -102,9 +93,7 @@ h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p, l
 img {display:block; margin:auto; width:50%;} .row:after, row:before {content:""; display:table; clear:both;} @media (min-width:601px){.main{width:74.99999%}.side{width:24.99999%}.half{width:49.99999%}}
 @media (max-width: 600px){h1 {font-size:19px} h2{font-size:19px} h3{font-size:19px} h4{font-size:17px} .ftext{font-size:22px} .half{padding:0;}} .m{margin-left:6px;} .sidenav a { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color:#f2f2f2; display:block; transition:0.3s;} th, td  {padding:5px 5px}
 .footer a {color:#EEEEEE; font-size:13px; text-decoration:none} .MyS a {color:#2d89ef; text-decoration:none}
-</style>
-</head>
-<body>
+</style></head><body>
 
 	<div class="hide-s" style="text-transform:uppercase; background-color: #ffffff; display:table; clear:both; padding:0; text-align:center; width:100%;">
 	<p style="color:#4B77BE; font-family:mfont; -webkit-margin-before:0; -webkit-margin-after:0; font-size:50px"><b>Lotto Info Philippines</b></p>
@@ -115,14 +104,11 @@ img {display:block; margin:auto; width:50%;} .row:after, row:before {content:"";
   <a href="../Index.html" class="hov hide-s">Home</a>
   <a href="../pcso-lotto-and-games.html" class="hov hide-s" style="color:#ffffff; border-bottom:3px solid white;">PCSO Lotto & Games</a>
   <a href="../results-and-winnings.html" class="hov hide-s">Results & Winnings</a>
-  <a href="#" class="hov hide-s">FAQs</a>
-</div>
-</div>
+  <a href="#" class="hov hide-s">FAQs</a></div></div>
 <div class="topnav" style="background:#ffffff; z-index:1; width:100%; overflow:hidden; position:-webkit-sticky; position:sticky; top:0; box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)">
   <a href="../index.html" class="hide-m hide-l" style="font-size:20px; color:#626567; margin-left:5px;"><b>Lotto Info Philippines</b></a>
   <a href="javascript:void(0)" class="hide-l hide-m" style="font-size:22px; margin-right:10px; color:#626567; text-decoration:none; float:right;" onclick="openNav()">&#9776;</a>
 </div>
-
 <div id="mySidenav" class="sidenav" style="height:100%; width:0; position:fixed; z-index:1; top:0; left:0; overflow-x:hidden; transition:0.4s; padding-top:60px; background:#2d89ef">
   <a href="javascript:void(0)" style="position:absolute; top:0; right:25px; font-size:36px; margin-left:50px;" onclick="closeNav()">&times;</a>
   <a href="../Index.html">Home</a>
@@ -148,7 +134,7 @@ function closeNav() {
 	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
-     style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+     style="display:block"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="9196104101"
      data-ad-format="auto"></ins>
@@ -169,16 +155,16 @@ function closeNav() {
     <li>Mark your chosen numbers <b>only</b> with a vertical line.</li>
     <li>If an error is made, mark the "<b>void</b>" to indicate that board is cancelled.</li>
     </ul>	
-	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	  <div style="overflow:hidden; text-align:center;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
-     style="display:block; text-align:center;box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+     style="display:block"
      data-ad-layout="in-article"
      data-ad-format="fluid"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="5525927185"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script></div>
     <p>Increase your chances to win with different <a href="#" style="color:#2d89ef; text-decoration:none">System Play / System Bet</a>. Which you can choose 7 up to 12 numbers, and the system will automatically combine all the different possible combinations. The more number combinations you have, the better your chances to win millions!</p>
     <ul>
     <li>Mark your chosen system under the "<b>SYS</b>" (keep it blank if you will play standard 6-number combination).</li>
@@ -229,16 +215,16 @@ function closeNav() {
     </tr>
     </table>
 	  <br>
-	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	  <div style="overflow:hidden; text-align:center;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
-     style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+     style="display:block"
      data-ad-layout="in-article"
      data-ad-format="fluid"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="5525927185"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script></div>
     <h2 style="color:#4B77BE"><strong>How to win in Ultra Lotto 6/58?<span class="htp"> How to play UltraLotto 6/58</span></strong></h2>
     <p>To win the jackpot, you need to match correctly all six of the winning numbers in any order. You can also win prizes by getting any 5, 4 or 3 numbers of the winning 6-number combination, in any order.</p>
     <h3 style="color:#4B77BE"><strong>How much can I win?<span class="htp"> How to play UltraLotto 6/58</span></strong></h3>
@@ -246,16 +232,16 @@ function closeNav() {
     <h3 style="color:#4B77BE"><strong>What if there are more than one jackpot winner?<span class="htp"> How to play UltraLotto 6/58</span></strong></h3>
     <p>Ultra Lotto 6/58 is a pari-mutuel game. Meaning if there are more than one jackpot prize winner, the prize money will be divided among the winners equally.</p>
     <p>When there is no jackpot winner, said jackpot prize shall be added to the computation of jackpot prize of the next scheduled draw.</p>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <div style="overflow:hidden; text-align:center;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
-     style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+     style="display:block; text-align:center"
      data-ad-layout="in-article"
      data-ad-format="fluid"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="5525927185"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script></div>
     <h3 style="color:#4B77BE"><strong>Where can I see the Ultra Lotto 6/58 results?<span class="htp"> How to play UltraLotto 6/58</span></strong></h3>
     <p>The draws is televise in PTV 4. You can also find the official and verified Ultra Lotto 6/58 results right here on the LottoInfo.ph website. Just head to the Ultra Lotto 6/58 draw results page. The winning numbers are posted once the draw results have been verified and confirmed. However, we still encourage you to visit the official PCSO website if you still want to verify the game results there.</p>
     <p>The draws are held at 9:00 p.m. every Tuesdays, fridays and sundays.</p>
@@ -272,37 +258,47 @@ function closeNav() {
 	
  <img src="../images/6-58-how.png" alt="How to play PCSO Ultra Lotto 6/58" class="hide-s" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">	
 	  <br class="hide-s">
- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+ <div style="overflow:hidden; text-align:center;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
-     style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+     style="display:block"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="9196104101"
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script><br>
+</script></div><br>
 	  <div class="MyS" style="padding:16px; border:1px solid #ccc; border-radius:5px">
 	<h3 style="color:#4B77BE;">You May Also Like</h3>
-	<p><a href="../pcso-lotto-and-games/Ultra-lotto-6-58.html" title="How To Play Ultra Lotto 6/58" rel="bookmark">How To Play Ultra Lotto 6/58</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/ultra-lotto-6-58" title="How To Play Ultra Lotto 6/58" rel="bookmark">How To Play Ultra Lotto 6/58</p>
 	<p><a href="../results-and-winnings.html#58Result" title="Ultra Lotto 6/58 Result" rel="bookmark">Ultra Lotto 6/58 Result</p>
-	<p><a href="../pcso-lotto-and-games/Grand-lotto-6-55.html" title="How To Play Grand Lotto 6/55" rel="bookmark">How To Play Grand Lotto 6/55</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/grand-lotto-6-55" title="How To Play Grand Lotto 6/55" rel="bookmark">How To Play Grand Lotto 6/55</p>
 	<p><a href="../results-and-winnings.html#55Result" title="Grand Lotto 6/55 Result" rel="bookmark">Grand Lotto 6/55 Result</p>
-	<p><a href="../pcso-lotto-and-games/Super-lotto-6-49.html" title="How To Play Super Lotto 6/49" rel="bookmark">How To Play Super Lotto 6/49</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/super-lotto-6-49" title="How To Play Super Lotto 6/49" rel="bookmark">How To Play Super Lotto 6/49</p>
 	<p><a href="../results-and-winnings.html#49Result" title="Super Lotto 6/49 Result" rel="bookmark">Super Lotto 6/49 Result</p>
-	<p><a href="../pcso-lotto-and-games/Mega-Lotto-6-45.html" title="How To Play Mega Lotto 6/45" rel="bookmark">How To Play Mega Lotto 6/45</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/mega-lotto-6-45" title="How To Play Mega Lotto 6/45" rel="bookmark">How To Play Mega Lotto 6/45</p>
 	<p><a href="../results-and-winnings.html#45Result" title="Mega Lotto 6/45 Result" rel="bookmark">Mega Lotto 6/45 Result</p>
-	<p><a href="../pcso-lotto-and-games/lotto-6-42.html" title="How To Play Lotto 6/42" rel="bookmark">How To Play Lotto 6/42</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/lotto-6-42" title="How To Play Lotto 6/42" rel="bookmark">How To Play Lotto 6/42</p>
 	<p><a href="../results-and-winnings.html#42Result" title="Lotto 6/42 Result" rel="bookmark">Lotto 6/42 Result</p>
-	<p><a href="../pcso-lotto-and-games/6-Digit-Game.html" title="How To Play 6 Digit Game" rel="bookmark">How To Play 6 Digit Game</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/6-digit-game" title="How To Play 6 Digit Game" rel="bookmark">How To Play 6 Digit Game</p>
 	<p><a href="../results-and-winnings.html#6DResult" title="6 Digit Game Result" rel="bookmark">(6D) 6 Digit Game Result</p>
-	<p><a href="../pcso-lotto-and-games/4-Digit-Game.html" title="How To Play 4 Digit Game" rel="bookmark">How To Play 4 Digit Game</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/4-digit-game" title="How To Play 4 Digit Game" rel="bookmark">How To Play 4 Digit Game</p>
 	<p><a href="../results-and-winnings.html#4DResult" title="4 Digit Game Result" rel="bookmark">(4D) 4 Digit Game Result</p>
-	<p><a href="../pcso-lotto-and-games/Swertres.html" title="How to Play Swertres" rel="bookmark">How To Play Swertres</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/swertres" title="How to Play Swertres" rel="bookmark">How To Play Swertres</p>
 	<p><a href="../results-and-winnings.html#SwertresResult" title="Swertres Result" rel="bookmark">Swertres Result</a></p>
-	<p><a href="../pcso-lotto-and-games/EZ-2.html" title="How To Play EZ2 Lotto" rel="bookmark">How To Play EZ2 Lotto</p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/EZ-2.html" title="How To Play EZ2 Lotto" rel="bookmark">How To Play EZ2 Lotto</p>
 	<p><a href="../results-and-winnings.html#EZ2Result" title="EZ2 Lotto Result" rel="bookmark">EZ2 Lotto Result</a></p>
-	</div>
+	</div><br>
+	  <div style="overflow:hidden; text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-8489405167836126"
+    data-ad-slot="9196104101"
+    data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div><br>
 	</div>
 </div>
 
@@ -368,16 +364,16 @@ function closeNav() {
  }
  }</script>
 
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<div class="hide-s" style="overflow:hidden; text-align:center;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Small -->
 	<ins class="adsbygoogle"
-	style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	style="display:block"
 	data-ad-client="ca-pub-8489405167836126"
 	data-ad-slot="9196104101"
 	data-ad-format="auto"></ins>
 	<script>
 	(adsbygoogle = window.adsbygoogle || []).push({});
-	</script>
+	</script></div>
 	
 <div class="row footer" style="background:#2d89ef">
 <div class="side">
@@ -395,14 +391,14 @@ function closeNav() {
 
 <div class="side">
 	<h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>PCSO lotto & games</b></h4>  
-  	<p><a href="Ultra-lotto-6-58.html">Ultra lotto 6/58</a></p>
-  	<p><a href="Grand-lotto-6-55.html">Grand lotto 6/55</a></p>
-	<p><a href="Super-lotto-6-49.html">Super lotto 6/49</a></p>
-	<p><a href="Mega-Lotto-6-45.html">Mega lotto 6/45</a></p>
-	<p><a href="lotto-6-42.html">Lotto 6/42</a></p>
-	<p><a href="6-Digit-Game.html">6 Digit lotto</a></p>
-	<p><a href="4-Digit-Game.html">4 Digit lotto</a></p>
-	<p><a href="Swertres.html">Swertres lotto</a></p>
+  	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/Ultra-lotto-6-58">Ultra lotto 6/58</a></p>
+  	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/Grand-lotto-6-55">Grand lotto 6/55</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/Super-lotto-6-49">Super lotto 6/49</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/Mega-Lotto-6-45">Mega lotto 6/45</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/lotto-6-42">Lotto 6/42</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/6-Digit-Game">6 Digit lotto</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/4-Digit-Game">4 Digit lotto</a></p>
+	<p><a href="https://lottoinfo.ph/pcso-lotto-and-games/Swertres">Swertres lotto</a></p>
 	<p><a href="EZ-2.html">EZ 2 lotto</a></p>
 </div>
 
@@ -431,7 +427,7 @@ function closeNav() {
  <p><a href="">Contact Us</a></p>
 </div>
 </div>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<div style="overflow:hidden; text-align:center;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
      style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%;"
@@ -440,7 +436,7 @@ function closeNav() {
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script></div>
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color: #EEEEEE; font-size:15px"><b>&copy; Lotto Info Philippines</b></h4>
 </div>		
