--- a/pcso-lotto-and-games/a.html
+++ b/pcso-lotto-and-games/a.html
@@ -281,7 +281,8 @@
     <!-- Article 6 --> <article><a href="http://www.fb.com" class="sp"><div class="articleE">
     <div class="articleF"><img src="../images/EZ-2-result.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:80px; padding-left:16px; padding-right:16px;">
     <header><p><a href="http://www.fb.com">How to Franchise Chowking in the Philippines?</a></p></header></div></div></a></article></div></div></div></main></div>
-    
+    <br><div class="hide-s hide-m" style="overflow:hidden; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
+
     <div class="side shake">
 <!-- Google Ads --> <div style="overflow:hidden; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div><br>
     
