--- a/pcso-lotto-and-games/Christian-Quotes-about-Happiness.html
+++ b/pcso-lotto-and-games/Christian-Quotes-about-Happiness.html
@@ -245,19 +245,19 @@
     <div class="articleF"><img src="../../images/mcdofaqs2.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:80px; padding-left:16px; padding-right:16px;">
     <header><p><a href="http://www.fb.com">McDonalds Franchising FAQs</a></p></header></div></div></a></article><br></div><div class="half">
     <!-- Article 2 --> <article><a href="http://www.fb.com" class="sp"><div class="articleE">
-    <div class="articleF"><img src="../../images/Jollibee.jpg" alt="How to Franchise Jollibee in the Philippines" style=" width:100%; height:205px"></div><div style="height:80px; padding-left:16px; padding-right:16px;">
+    <div class="articleF"><img src="../../images/Jollbee.jpg" alt="How to Franchise Jollibee in the Philippines" style=" width:100%; height:205px"></div><div style="height:80px; padding-left:16px; padding-right:16px;">
     <header><p><a href="http://www.fb.com">How to Franchise Jollibee?</a></p></header></div></div></a></article><br></div><div class="half">
     <!-- Article 3 --> <article><a href="http://www.fb.com" class="sp"><div class="articleE">
     <div class="articleF"><img src="../../images/mcdofaqs2.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:80px; padding-left:16px; padding-right:16px;">
     <header><p><a href="http://www.fb.com">McDonalds Franchising FAQs (Frequently Asked Questions)</a></p></header></div></div></a></article><br></div><div class="half">
     <!-- Article 4 --> <article><a href="http://www.fb.com" class="sp"><div class="articleE">
-    <div class="articleF"><img src="../../images/Jollibee.jpg" alt="How to Franchise Jollibee in the Philippines" style=" width:100%; height:205px"></div><div style="height:80px; padding-left:16px; padding-right:16px;">
+    <div class="articleF"><img src="../../images/Jollbee.jpg" alt="How to Franchise Jollibee in the Philippines" style=" width:100%; height:205px"></div><div style="height:80px; padding-left:16px; padding-right:16px;">
     <header><p><a href="http://www.fb.com">How to Franchise Jollibee in the Philippines?</a></p></header></div></div></a></article><br></div><div class="half">
     <!-- Article 5 --> <article><a href="http://www.fb.com" class="sp"><div class="articleE">
     <div class="articleF"><img src="../../images/mcdo2.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:80px; padding-left:16px; padding-right:16px;">
     <header><p><a href="http://www.fb.com">How to Franchise Chowking in the Philippines?</a></p></header></div></div></a></article><br></div><div class="half">
     <!-- Article 6 --> <article><a href="http://www.fb.com" class="sp"><div class="articleE">
-    <div class="articleF"><img src="../../images/Jollibee.jpg" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:80px; padding-left:16px; padding-right:16px;">
+    <div class="articleF"><img src="../../images/Jolliee.jpg" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:80px; padding-left:16px; padding-right:16px;">
     <header><p><a href="http://www.fb.com">How to Franchise Chowking in the Philippines?</a></p></header></div></div></a></article></div></div></div></main></div>
     
     <div class="side shake">
