--- a/pcso-lotto-and-games/Christian-Quotes-about-Happiness.html
+++ b/pcso-lotto-and-games/Christian-Quotes-about-Happiness.html
@@ -80,9 +80,8 @@
 	<a href="../Resources.html" class="hov hide-s"><b>Resources</b></a></nav></div>
 	
 <div class="hide-m hide-l topnav" style="background:#ffffff; z-index:5; width:100%; height:56px; overflow:hidden; position:-webkit-sticky; position:sticky; top:0; box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)">
-<div style="width:83%; display:inline-block; float:left"><a href="index.html" style="font-family:pFont; font-size:35px; padding:0; color:#e84118; margin-left:15px; letter-spacing:-1.5px;">Tag<span style="color:#404040">Lish</span></a>
-<a href="../../../search.html" style=" padding:0; margin-top:9px; float:right;"><img src="../../../images/searchIcon.png" style="width:35px"></a></div>
-<div style="width:17%; float:left"><a href="javascript:void(0)" style="padding:0; margin-left:20px;margin-top:6px; font-size:30px; color:#626567; text-decoration:none;" onclick="openNav()">&#9776;</a></div></div>
+<a href="index.html" style="font-family:pFont; font-size:35px; padding:0; color:#e84118; margin-left:15px; letter-spacing:-1.5px;">Tag<span style="color:#404040">Lish</span></a>
+<a href="javascript:void(0)" style="padding:0; margin-right:20px; margin-top:6px; font-size:30px; float:right; color:#626567; text-decoration:none;" onclick="openNav()">&#9776;</a></div>
 
 <!-- Mobile Ads Bottom --> <div class="hide-m hide-l" style="text-align:center; z-index:5; border-top:1px solid #ccc; padding:2px; position:fixed; width:100%; height:56px; bottom:0; background:#fff"> <a style="color:#404040; float:right; border-radius:2px; position:absolute; bottom:55.5px; background:#f2f2f2; right:0; padding:2px; font-size:12px;" onclick="this.parentElement.style.display='none'">&nbsp;&#10005;&nbsp;</a> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block; width:100%; max-width:320px; height:50px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="4062277366"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
 	
