--- a/pcso-lotto-and-games/Christian-Quotes-copy.html
+++ b/pcso-lotto-and-games/Christian-Quotes-copy.html
@@ -261,7 +261,20 @@
 <!-- Related Articles --> <div style="background:#f2f2f2;"><p class="ff" style="padding:5px; padding-top:8px; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>&nbsp;Related Articles</b></p></div><div class="row fcolor related" style="width:100%; max-width:450px; margin:auto"><br>
 <!-- Article 1 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
-<!-- Article 2 --><article class="card"><a href=""><img src="../../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Avatar"></a>
+<!-- Article 2 -->
+		<div style="height:318px; overflow:hidden">
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-86+1k-kd+d+1os"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="8037854812"></ins>
+	<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+	</script></div><br>
+		
+		<article class="card"><a href=""><img src="../../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
 <!-- Article 3 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
