--- a/pcso-lotto-and-games/Christian-Quotes-copy.html
+++ b/pcso-lotto-and-games/Christian-Quotes-copy.html
@@ -274,7 +274,7 @@
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
 <!-- Article 8 --><article class="card"><a href=""><img src="../../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
-<!-- Google Ads --> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle ads" style="display:block" data-ad-format="fluid" data-ad-layout-key="-86+1k-kd+d+1os" data-ad-client="ca-pub-8489405167836126" data-ad-slot="8037854812"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
+<!-- Google Ads --> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle ads" style="display:block" data-ad-format="fluid" data-ad-layout-key="-86+1k-kd+d+1os" data-ad-client="ca-pub-8489405167836126" data-ad-slot="8037854812"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
 <!-- Article 10 --><article class="card"><a href=""><img src="../../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
 <!-- Article 11 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
